Add new code to codes list

--- a/clicker.html
+++ b/clicker.html
@@ -212,7 +212,8 @@
             "Steve_Shuba",
             "FREE_moneys",
             "FREE_moneys_and_upgrades",
-            "NewYear25"
+            "NewYear25",
+            "SpringNOW"
 
         ]
 
