Revert "Add new code to codes list"
This reverts commit 0c564f486790446aecab3dd736e840713a7c24a7.

--- a/clicker.html
+++ b/clicker.html
@@ -212,8 +212,7 @@
             "Steve_Shuba",
             "FREE_moneys",
             "FREE_moneys_and_upgrades",
-            "NewYear25",
-            "SpringNOW"
+            "NewYear25"
 
         ]
 
