--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<p> I love programming, I usually write in python and I like it.</p>
 				<p> I also have a younger brother, Lev, and we play together.</p>
 				<p> I also play football and swimming.</p>
-				<p> I also have a youtube chanel.</p>
+				<p> I also have a YouTube chanel.</p>
 				<a href="https://www.youtube.com/@iljashubnikov7312/community"> My youtube chanel(link)</a>
 				<p> Please subscribe! </p>
 				<p>
