--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				</div>
 			</div>
 			<div id="mainsection" class="text">
-				<p> I love programming, I usually write in python and I like it.</p>
+				<p> I love programming, I usually write in Python and JavaScript and I like it.</p>
 				<p> I also have a younger brother, Lev, and we play together.</p>
 				<p> I also play football and swimming.</p>
 				<p> I also have a YouTube chanel.</p>
